feat: Add user flags completion and validation
- Add completion for types.xml based on cfglimitsdefinitionsuser.xml.
- Add validation for types.xml based on cfglimitsdefinitionsuser.xml.